--- a/01_reglament/main.tex
+++ b/01_reglament/main.tex
@@ -15,7 +15,8 @@
 \usepackage[english,russian]{babel} % добавление русского языка
 \usepackage{cmap} % отображение юникод символов в pdf файле
 \usepackage{eso-pic}
-
+\usepackage{tikz}
+\usetikzlibrary{backgrounds}
 
 % Figure and table numbering by section
 \counterwithin{figure}{section}
@@ -32,7 +33,6 @@
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{\tt doi:~#1}}
 
 %==============================================================================
-
 
 % background
 \title{Регламент}
@@ -129,22 +129,22 @@
 
 %%%
 \subsection{Очный этап} \hspace*{1cm}
-Длительность очного этапа не менеОбщее количество команд участников финала (квота) указывается на официальном сайте в разделе «Кубок РТК Высшая лига: Финал». В случае изменения квоты участников финала по независящим от организаторов причинам новые значения должны быть опубликованы на официальном сайте не позднее чем за 1 месяц до начала финальных соревнований.
-В финал без отбора проходят команды-победители всех этапов сезона. Далее отбор финалистов в рамках квоты производится при помощи рейтинговой таблицы. Таблица формируется, публикуется и обновляется в ходе всего сезона на официальном сайте cup.rtc.ru в разделе «Кубок РТК Высшая лига». В ходе сезона все результаты всех команд вносятся в рейтинговую таблицу. Рейтинговая таблица формируется следующим образом: для каждой команды вычисляется среднее значение набранных баллов за все пройденные этапы. Полученные в результате расчета значения ранжируются от максимального к минимальному. Отбор команд в Финал соревнований «Кубок РТК Высшая лига» начинается с максимального значения.
+\\\hspace*{1cm}Длительность очного этапа не менеОбщее количество команд участников финала (квота) указывается на официальном сайте в разделе «Кубок РТК Высшая лига: Финал». В случае изменения квоты участников финала по независящим от организаторов причинам новые значения должны быть опубликованы на официальном сайте не позднее чем за 1 месяц до начала финальных соревнований.
+\\\hspace*{1cm}В финал без отбора проходят команды-победители всех этапов сезона. Далее отбор финалистов в рамках квоты производится при помощи рейтинговой таблицы. Таблица формируется, публикуется и обновляется в ходе всего сезона на официальном сайте cup.rtc.ru в разделе «Кубок РТК Высшая лига». В ходе сезона все результаты всех команд вносятся в рейтинговую таблицу. Рейтинговая таблица формируется следующим образом: для каждой команды вычисляется среднее значение набранных баллов за все пройденные этапы. Полученные в результате расчета значения ранжируются от максимального к минимальному. Отбор команд в Финал соревнований «Кубок РТК Высшая лига» начинается с максимального значения.
 От одной образовательной организации на финал может отобраться не более 
 4 команд.
-Если в ходе сезона в команде сменился второй или третий участник (не капитан) или команда сменила название, то команда не считается новой в рейтинге. Если участник уже зарегистрирован в рейтинговой таблице как капитан в одной из команд, то он не может регистрироваться в других этапах как второй участник в другой команде. Если участник уже зарегистрирован в рейтинговой таблице как второй член команды, то он может стать капитаном в новой команде, при этом он вычеркивается из состава предыдущей команды.е 2 дней.
-На очном этапе участники получают подробное описание полигона и миссии с баллами за каждое задание. Также участники получают доступ к полигону для проведения тестовых заездов.
+\\\hspace*{1cm}Если в ходе сезона в команде сменился второй или третий участник (не капитан) или команда сменила название, то команда не считается новой в рейтинге. Если участник уже зарегистрирован в рейтинговой таблице как капитан в одной из команд, то он не может регистрироваться в других этапах как второй участник в другой команде. Если участник уже зарегистрирован в рейтинговой таблице как второй член команды, то он может стать капитаном в новой команде, при этом он вычеркивается из состава предыдущей команды.е 2 дней.
+\\\hspace*{1cm}На очном этапе участники получают подробное описание полигона и миссии с баллами за каждое задание. Также участники получают доступ к полигону для проведения тестовых заездов.
 Участники должны самостоятельно подготовить и запрограммировать робота для выполнения заданий. По окончании времени на подготовку начинаются соревновательные попытки. По результатам попыток подводятся итоги и определяются победители.
 
 %%%
 \subsection{Подготовка робота в ходе очного этапа} \hspace*{1cm}
-Первый день (или более, в случае, когда продолжительность очного этапа превышает 2 дня) - этап подготовки. Точная длительность этапа подготовки, а также время начала соревновательных попыток определяется судьями в день начала очного этапа (зависит от количества команд).
-Участники самостоятельно собирают и программируют робота для выполнения заданий и миссии в целом. Каждая команда обязана иметь ноутбук с предустановленной ОС, который обеспечивается самими участниками команды, по собственному усмотрению, без ограничений. В ходе попытки робот должен выполнять задания самостоятельно, то есть быть автономным.
-Программа, управляющая движением робота, должна быть создана непосредственно командой (участником) соревнований. В ходе подготовки участникам разрешается использование портативных носителей и сети Интернет.
-ЗАПРЕЩАЕТСЯ взаимодействие с лицами, не являющимися членами команды, использование подсказок, в том числе с помощью электронных средств связи. В случае нарушения, команда по решению судьи будет дисквалифицирована. Участник может обращаться к судьям за разъяснениями правил соревнования и задания.
-Участники могут выполнять тестовые заезды роботов на полигоне в любое время, кроме времени проведения попыток, карантина (см. далее), а также во время работы судей на полигоне.
-Очередность тестовых заездов формируется командами самостоятельно в зависимости от готовности. В случае возникновения конфликта интересов между командами в выборе очередности судья может ограничить время на тестирование для каждой команды, а также количество подходов к полигону составив очередность тренировок.
+\\\hspace*{1cm}Первый день (или более, в случае, когда продолжительность очного этапа превышает 2 дня) - этап подготовки. Точная длительность этапа подготовки, а также время начала соревновательных попыток определяется судьями в день начала очного этапа (зависит от количества команд).
+\\\hspace*{1cm}Участники самостоятельно собирают и программируют робота для выполнения заданий и миссии в целом. Каждая команда обязана иметь ноутбук с предустановленной ОС, который обеспечивается самими участниками команды, по собственному усмотрению, без ограничений. В ходе попытки робот должен выполнять задания самостоятельно, то есть быть автономным.
+\\\hspace*{1cm}Программа, управляющая движением робота, должна быть создана непосредственно командой (участником) соревнований. В ходе подготовки участникам разрешается использование портативных носителей и сети Интернет.
+\\\hspace*{1cm}ЗАПРЕЩАЕТСЯ взаимодействие с лицами, не являющимися членами команды, использование подсказок, в том числе с помощью электронных средств связи. В случае нарушения, команда по решению судьи будет дисквалифицирована. Участник может обращаться к судьям за разъяснениями правил соревнования и задания.
+\\\hspace*{1cm}Участники могут выполнять тестовые заезды роботов на полигоне в любое время, кроме времени проведения попыток, карантина (см. далее), а также во время работы судей на полигоне.
+\\\hspace*{1cm}Очередность тестовых заездов формируется командами самостоятельно в зависимости от готовности. В случае возникновения конфликта интересов между командами в выборе очередности судья может ограничить время на тестирование для каждой команды, а также количество подходов к полигону составив очередность тренировок.
 В отведенное время между попытками, если робот не находится в карантине, участники имеют право на оперативное конструктивное и программное изменение робота (в том числе ремонт, замена элементов питания и прочее), если внесенные изменения не противоречат требованиям, предъявляемым к конструкции робота, и не нарушают регламент соревнований.
 
 %%%
@@ -154,7 +154,7 @@
 %%%
 \subsection{Карантин} \hspace*{1cm}
 За 15 минут до начала попыток все команды помещают роботов в карантин. В любой момент времени в карантине роботы должны быть выключены (при этом зарядка аккумуляторных батарей разрешена), конструкция робота должна оставаться неизменной. 
-После помещения робота в карантин судья проводит жеребьевку, определяющую очередность выступления команд.
+\\\hspace*{1cm}После помещения робота в карантин судья проводит жеребьевку, определяющую очередность выступления команд.
 
 %%%
 \subsection{Жеребьевка} \hspace*{1cm}
@@ -179,9 +179,9 @@
 %%%
 \section{Судейство} \hspace*{1cm}
 Контроль соревнований и подведение итогов осуществляется судейской коллегией в соответствии с регламентом соревнований.
-Выполнение роботом заданий на полигоне и время окончания попытки фиксируются двумя судьями в протоколах. По окончании попытки капитан команды должен проверить судейский протокол и поставить подпись, соглашаясь с результатами. Протоколы без подписей не учитываются в итоговом списке баллов. Участники команды имеют право сфотографировать подписанный протокол.
-Спорные моменты, возникающие в период соревнований, разрешаются судейской коллегией на месте. Апелляции принимаются в течение часа после окончания попытки.
-Судья имеет право дисквалифицировать участника, чьи действия нарушают регламент по любой причине, включая, помимо прочего, неспортивное поведение как на площадке, так и за ее пределами в ходе проведения соревнований.
+\\\hspace*{1cm}Выполнение роботом заданий на полигоне и время окончания попытки фиксируются двумя судьями в протоколах. По окончании попытки капитан команды должен проверить судейский протокол и поставить подпись, соглашаясь с результатами. Протоколы без подписей не учитываются в итоговом списке баллов. Участники команды имеют право сфотографировать подписанный протокол.
+\\\hspace*{1cm}Спорные моменты, возникающие в период соревнований, разрешаются судейской коллегией на месте. Апелляции принимаются в течение часа после окончания попытки.
+\\\hspace*{1cm}Судья имеет право дисквалифицировать участника, чьи действия нарушают регламент по любой причине, включая, помимо прочего, неспортивное поведение как на площадке, так и за ее пределами в ходе проведения соревнований.
 
 %%%
 \section{Порядок определения победителя} \hspace*{1cm}
@@ -198,10 +198,10 @@
 %%%
 \section{Отбор в финал} \hspace*{1cm}
 Общее количество команд участников финала (квота) указывается на официальном сайте в разделе «Кубок РТК Высшая лига: Финал». В случае изменения квоты участников финала по независящим от организаторов причинам новые значения должны быть опубликованы на официальном сайте не позднее чем за 1 месяц до начала финальных соревнований.
-В финал без отбора проходят команды-победители всех этапов сезона. Далее отбор финалистов в рамках квоты производится при помощи рейтинговой таблицы. Таблица формируется, публикуется и обновляется в ходе всего сезона на официальном сайте cup.rtc.ru в разделе «Кубок РТК Высшая лига». В ходе сезона все результаты всех команд вносятся в рейтинговую таблицу. Рейтинговая таблица формируется следующим образом: для каждой команды вычисляется среднее значение набранных баллов за все пройденные этапы. Полученные в результате расчета значения ранжируются от максимального к минимальному. Отбор команд в Финал соревнований «Кубок РТК Высшая лига» начинается с максимального значения.
-От одной образовательной организации на финал может отобраться не более 
+\\\hspace*{1cm}В финал без отбора проходят команды-победители всех этапов сезона. Далее отбор финалистов в рамках квоты производится при помощи рейтинговой таблицы. Таблица формируется, публикуется и обновляется в ходе всего сезона на официальном сайте cup.rtc.ru в разделе «Кубок РТК Высшая лига». В ходе сезона все результаты всех команд вносятся в рейтинговую таблицу. Рейтинговая таблица формируется следующим образом: для каждой команды вычисляется среднее значение набранных баллов за все пройденные этапы. Полученные в результате расчета значения ранжируются от максимального к минимальному. Отбор команд в Финал соревнований «Кубок РТК Высшая лига» начинается с максимального значения.
+\\\hspace*{1cm}От одной образовательной организации на финал может отобраться не более 
 4 команд.
-Если в ходе сезона в команде сменился второй или третий участник (не капитан) или команда сменила название, то команда не считается новой в рейтинге. Если участник уже зарегистрирован в рейтинговой таблице как капитан в одной из команд, то он не может регистрироваться в других этапах как второй участник в другой команде. Если участник уже зарегистрирован в рейтинговой таблице как второй член команды, то он может стать капитаном в новой команде, при этом он вычеркивается из состава предыдущей команды.
+\\\hspace*{1cm}Если в ходе сезона в команде сменился второй или третий участник (не капитан) или команда сменила название, то команда не считается новой в рейтинге. Если участник уже зарегистрирован в рейтинговой таблице как капитан в одной из команд, то он не может регистрироваться в других этапах как второй участник в другой команде. Если участник уже зарегистрирован в рейтинговой таблице как второй член команды, то он может стать капитаном в новой команде, при этом он вычеркивается из состава предыдущей команды.
 
 \newpage
 \title{Регламент}
