modifed row restart

--- a/02_proto-col/001_City/city.tex
+++ b/02_proto-col/001_City/city.tex
@@ -87,7 +87,7 @@
     \hline 
     Соблюдено правило движения только по полосам & \complianceTrafficRules & \\
     \hline
-    Вмешательство без штрафа (1) &  \\
+    Вмешательство без штрафа (1) &  & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
@@ -109,7 +109,7 @@
     \hline 
     Соблюдено правило движения только по полосам & \complianceTrafficRules & \\
     \hline
-    Вмешательство без штрафа (2) &  \\
+    Вмешательство без штрафа (2) &  & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
