--- a/02_proto-col/003_Hospital/hospital.tex
+++ b/02_proto-col/003_Hospital/hospital.tex
@@ -98,7 +98,7 @@
     \hline
     \nameTaskFifth & \taskFifth & \\
     \hline
-    Вмешательство без штрафа (1) &  \\
+    Вмешательство без штрафа (1) & & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
@@ -122,7 +122,7 @@
     \hline
     \nameTaskFifth & \taskFifth & \\
     \hline
-    Вмешательство без штрафа (1) &  \\
+    Вмешательство без штрафа (2) & & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
@@ -145,8 +145,6 @@
     \nameTaskFourth & \taskFourth & \\
     \hline
     \nameTaskFifth & \taskFifth & \\
-    \hline
-    Вмешательство без штрафа (1) &  \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
