--- a/02_proto-col/001_City/city.tex
+++ b/02_proto-col/001_City/city.tex
@@ -36,7 +36,7 @@
 \newcommand{\boardingPassangersFirstZone}{115}
 \newcommand{\boardingPassangersSecondZone}{135}
 \newcommand{\passangersDelievery}{160}
-\newcommand{\complianceTrafficRules}{100}
+\newcommand{\complianceTrafficRules}{90}
 
 %==============================================================================
 \AddToShipoutPictureBG*{
@@ -50,7 +50,7 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Высшая Лига: ВШЭ, 24-25 мая 2025 г.\par}}
+        «Высшая Лига: НИУ ВШЭ СПБ, 5-6 июля 2025 г.\par}}
     \fi
 }
 
