--- a/02_proto-col/008_General/general.tex
+++ b/02_proto-col/008_General/general.tex
@@ -91,6 +91,7 @@
                 \item Расставить столы и стулья
                 \item Пробросить удлинители и кабель каналы
                 \item Протереть полигон
+                \item Удостовериться, что поддоны полигона скручены и хорошо стыкуются
             \end{enumerate}
             \item Очный этап
             \begin{enumerate}
