Обновил задания и протоколы

--- a/02_proto-col/002_Garden/garden.tex
+++ b/02_proto-col/002_Garden/garden.tex
@@ -34,7 +34,7 @@
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{\tt doi:~#1}}
 \newcommand{\wrongPlod}{\color{red}-50}
 \newcommand{\DetectPlod}{40}
-\newcommand{\CatchPlod}{40}
+\newcommand{\CatchPlod}{50}
 \newcommand{\RottenPlod}{60}
 \newcommand{\CatchRottenPlod}{100}
 \newcommand{\StoredRottenPlod}{70}
@@ -51,13 +51,13 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Высшая Лига: Минск, 4-5 октября 2025 г.\par}}
+        «Кубок РТК Высшая Лига: Минск», 4-5 октября 2025 г.\par}}
     \fi
 }
 
 % background
 \date{} % Добавлено для удаления даты
-\title{Протокол для очного этапа \\ Хакатона:«Сбор урожая}
+\title{Протокол для очного этапа \\ Хакатона:«Сбор урожая»}
 
 %==============================================================================
 \begin{document}
