--- a/02_proto-col/003_Hospital/hospital.tex
+++ b/02_proto-col/003_Hospital/hospital.tex
@@ -59,7 +59,7 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Высшая Лига: ВШЭ, 24-25 мая 2025 г.\par}}
+        «Кубок РТК Высшая Лига: ВШЭ», 24-25 мая 2025 г.\par}}
     \fi
 }
 
