--- a/02_proto-col/006_Cuprum/cuprum.tex
+++ b/02_proto-col/006_Cuprum/cuprum.tex
@@ -52,13 +52,13 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Кубок РТК Высшая лига: МИРЭА», 27-28 сентября 2025 г.\par}}
+        «Кубок РТК Высшая лига:Робо+», 27-28 сентября 2025 г.\par}}
     \fi
 }
 
 % background
 \date{} % Добавлено для удаления даты
-\title{Протокол для очного этапа \\ Хакатона:«Ледяной вызов»}
+\title{Задание для очного этапа \\ Хакатона:«Электролиз меди»}
 
 %==============================================================================
 \begin{document}
@@ -100,8 +100,8 @@
     Кнопка нажата неверно (максимум 3 раза за попытку) & \WrongButton &  \\
     \hline
 \end{tabularx}
-
 \vspace*{0.25cm}
+
 \begin{tabularx}{\textwidth}{|X|c|p{2cm}|}
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
@@ -125,7 +125,6 @@
     Кнопка нажата неверно (максимум 3 раза за попытку) & \WrongButton &  \\
     \hline
 \end{tabularx}
-\vspace*{0.25cm}
 
 \vspace*{0.25cm}
 \begin{tabularx}{\textwidth}{|X|c|p{2cm}|}
