--- a/02_proto-col/007_IceSnow/icesnow.tex
+++ b/02_proto-col/007_IceSnow/icesnow.tex
@@ -50,7 +50,7 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        ««Кубок РТК Высшая лига: МИРЭА», 11-12 октября 2025 г.\par}}
+        «Кубок РТК Высшая лига: РТУ МИРЭА», 11-12 октября 2025 г.\par}}
     \fi
 }
 
@@ -136,7 +136,6 @@
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
 \end{tabularx}
-\vspace*{0.25cm}
 
 \vspace*{1cm}
 
