--- a/03_tasks/001_City/city_task.tex
+++ b/03_tasks/001_City/city_task.tex
@@ -32,14 +32,11 @@
 
 % Overriding abbrvnat BibTeX template to use the plainurl template's DOI hyperlinks
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{\tt doi:~#1}}
-\newcommand{\WrongButton}{\color{red}-20}
-\newcommand{\firstKZ}{150}
-\newcommand{\secondKZ}{130}
-\newcommand{\thirdKZ}{100}
-\newcommand{\writeButtonsecondKZ}{40}
-\newcommand{\writeButtonfirstKZ}{40}
-\newcommand{\writeButtonthirdKZ}{40}
-
+\newcommand{\penaltyBusPoints}{\color{red}-50}
+\newcommand{\boardingPassangersFirstZone}{115}
+\newcommand{\boardingPassangersSecondZone}{135}
+\newcommand{\passangersDelievery}{160}
+\newcommand{\complianceTrafficRules}{90}
 %==============================================================================
 \AddToShipoutPictureBG*{
     \ifnum\value{page}=1
@@ -52,13 +49,13 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Кубок РТК Высшая лига:Робо+», 27-28 сентября 2025 г.\par}}
+        «Кубок РТК Высшая Лига: Минск», 4-5 октября 2025 г.\par}}
     \fi
 }
 
 % background
 \date{} % Добавлено для удаления даты
-\title{Задание для очного этапа \\ Хакатона:«Электролиз меди»}
+\title{Задание для очного этапа \\ Хакатона:«Движение по городу»}
 
 %==============================================================================
 \begin{document}
@@ -68,16 +65,18 @@
 \vspace*{-1cm}
 
 \renewcommand{\arraystretch}{1}
-\textbf{Задача} - разработать автономного робота для поиска коротких замыканий между электродами по наличию магнитного поля.
+\textbf{Задача} - автономная доставка условных пассажиров из зон посадки в зону высадки.
 
-Робот должен начать движение со стартовой ячейки, проехать по 8-ми ваннам, определить, по наличию магнитного поля, пары анод-катод 
-с коротким замыканием и вернувшись в стартовую ячейку нажать кнопки с номерами ванн, где обнаружено замыкание.
-Также по окончании обследования должен быть сформирован файл-протокол.
+Задание считается выполненным если робот проехал по городу соблюдая правила дорожного движения, остановился на 2 секунды 
+у одной или двух зон посадки перед знаком «Остановка» (для условной посадки пассажиров) после 
+чего доехал до зоны высадки и остановился у нее перед знаком «Парковка». Очередность проезда зон посадки значения не имеет, 
+также не обязательно проезжать обе зоны посадкию.
+За соблюдение дорожной разметки (движение по своей полосе) начисляются дополнительные баллы.
 
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
-    \item[>>] реализовать автономное движение по электролитическим ваннам;
-    \item[>>] выполнить поиск коротких замыканий.
+    \item[>>] реализовать автономное движение по городу;
+    \item[>>] выполнить распознавание знаков дорожного движения;
 \end{itemize}
 
 Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
@@ -88,9 +87,10 @@
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
 
 \begin{itemize}
+    \item[>>] Движение по полосам засчитывается только в том случаем, если робот доехал до парковки (знак P) и забрал хотя бы одних пассажиров.
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
-    \item[>>] Короткие замыкания определяются безконтактным способом.
-    \item[>>] Баллы за правильное нажатие кнопок могут быть начислены только в том случае, если было обнаружено короткое замыкание.
+    \item[>>] Имитация объектов общесвтенного транспорта не может находиться на перекрестках и угловых ячейках.
+
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -98,24 +98,20 @@
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
     \hline
-    Обнаружено короткое замыкание №1 & \firstKZ &  \\
+    Выполнена посадка первой группы пассажиров & \boardingPassangersFirstZone &  \\
     \hline
-    Обнаружено короткое замыкание №2 & \secondKZ & \\
+    Выполнена посадка второй группы пассажиров & \boardingPassangersSecondZone & \\
     \hline
-    Обнаружено короткое замыкание №3 & \thirdKZ & \\
-    \hline
-    Нажата кнопка короткого замыкания №1 & \writeButtonfirstKZ & \\
-    \hline
-    Нажата кнопка короткого замыкания №2 & \writeButtonsecondKZ & \\
-    \hline
-    Нажата кнопка короткого замыкания №3 & \writeButtonthirdKZ & \\
+    Пассажиры доставлены в зону высадки & \passangersDelievery & \\
+    \hline 
+    Соблюдено правило движения только по полосам & \complianceTrafficRules & \\
     \hline
     \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
     \hline
-    Кнопка нажата неверно (максимум 3 раза за попытку) & \WrongButton &  \\
+    Столкновение с общественным транспортом & \penaltyBusPoints &  \\
     \hline
 \end{tabularx}
-\vspace*{0.5cm}
+\vspace*{0.25cm}
 
 \textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
 результаты выполнения заданий в понятном и читаемом виде. 
