--- a/03_tasks/002_Garden/garden_task.tex
+++ b/03_tasks/002_Garden/garden_task.tex
@@ -32,11 +32,12 @@
 
 % Overriding abbrvnat BibTeX template to use the plainurl template's DOI hyperlinks
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{\tt doi:~#1}}
-\newcommand{\firstArma}{110}
-\newcommand{\secondArma}{110}
-\newcommand{\thirdArma}{110}
-\newcommand{\fourthArma}{110}
-\newcommand{\MasterHoming}{60}
+\newcommand{\wrongPlod}{\color{red}-50}
+\newcommand{\DetectPlod}{40}
+\newcommand{\CatchPlod}{50}
+\newcommand{\RottenPlod}{60}
+\newcommand{\CatchRottenPlod}{100}
+\newcommand{\StoredRottenPlod}{70}
 
 %==============================================================================
 \AddToShipoutPictureBG*{
@@ -50,13 +51,13 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Кубок РТК Высшая лига: МИРЭА», 11-12 октября 2025 г.\par}}
+        «Кубок РТК Высшая Лига: Минск», 4-5 октября 2025 г.\par}}
     \fi
 }
 
 % background
 \date{} % Добавлено для удаления даты
-\title{Протокол для очного этапа \\ Хакатона:«Ледяной вызов»}
+\title{Задание для очного этапа \\ Хакатона:«Сбор урожая»}
 
 %==============================================================================
 \begin{document}
@@ -66,22 +67,18 @@
 \vspace*{-1cm}
 
 \renewcommand{\arraystretch}{1}
-\textbf{Задача} - автономная уборка снега на территории нефтедобычи.
+\textbf{Задача} - автономный сбор урожая в условиях смоделированной тепличной среды.
 
-Робот должен автономно очистить от снега территорию вокруг арматур, расположенных в 
-углублениях холмистой местности нефтедобывающего объекта и вернуться на зарядную станцию.
-
-Задание считается выполненным полностью если все четыре углубления с арматурой очищены от снега.  
-Допускается только механическое воздействие на снег с помощью самого робота или размещенного на нем 
-дополнительного оборудования – скребков, щеток (в том числе и вращающихся), и т.п. 
-Уборка снега методом «сдувания» не разрешается. Применение методов, причиняющих вред полигону также запрещено.
+Робот должен начать движение со стартовой ячейки, проехать по теплице и собрать заданные овощи или фрукты, 
+а также утилизировать один гнилой фрукт или овощ.
+Также по окончании обследования должен быть сформирован файл-протокол.
 
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
-    \item[>>] реализовать автономное движение по полигону с препятствиями;
-    \item[>>] выполнить поиск арматур;
-    \item[>>] разработать механизм для очистки арматур от снега;
-    \item[>>] выполнить возврат на стартовую ячейку.
+    \item[>>] реализовать автономное движение по теплице;
+    \item[>>] выполнить распознавание заданных овощей/фруктов;
+    \item[>>] выполнить сбор урожая заданных овощей/фруктов;
+    \item[>>] выполнить захват и доставку сгнившего фрукта/овоща в специальный контейнер.
 \end{itemize}
 
 Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
@@ -92,9 +89,7 @@
 По требованию судьи участник обязан продемонстрировать наличие датчиков/камер на роботе и их работу!
 
 \begin{itemize}
-    \item[>>] во время попытки баллы за каждое задание начисляются только один раз.
-    \item[>>] короткие замыкания определяются безконтактным способом.
-    \item[>>] баллы за возврат на стартовую ячейку начисляются только в случае очистки от снега арматур (не менее 1).
+    \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
 \end{itemize}
 
 \vspace*{0.25cm}
@@ -102,15 +97,21 @@
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
     \hline
-    Очищена арматура  №1 от снега & \firstArma &  \\
+    Распознан заданный овощ/фрукт & \DetectPlod &  \\
     \hline
-    Очищена арматура  №2 от снега & \secondArma & \\
+    Собран правильный овощ/фрукт & \CatchPlod & \\
     \hline
-    Очищена арматура  №3 от снега & \thirdArma & \\
+    Распознан сгнивший овощ/фрукт & \RottenPlod & \\
+    \hline 
+    Захвачен сгнивший овощ/фрукт & \CatchRottenPlod & \\
     \hline
-    Очищена арматура  №4 от снега & \fourthArma & \\
+    Перемещен сгнивший овощ/фрукт в контейнер & \StoredRottenPlod & \\
     \hline
-    Выполнен возврат робота на стартовую ячейку & \MasterHoming & \\
+    Вмешательство без штрафа (1) &  & \\
+    \hline
+    \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
+    \hline
+    Собран неправильный овощ/фрукт & \wrongPlod &  \\
     \hline
 \end{tabularx}
 \vspace*{0.25cm}
