--- a/03_tasks/007_IceSnow/icesnow_task.tex
+++ b/03_tasks/007_IceSnow/icesnow_task.tex
@@ -32,13 +32,11 @@
 
 % Overriding abbrvnat BibTeX template to use the plainurl template's DOI hyperlinks
 \newcommand*{\doi}[1]{\href{https://doi.org/#1}{\tt doi:~#1}}
-\newcommand{\WrongButton}{\color{red}-20}
-\newcommand{\firstKZ}{150}
-\newcommand{\secondKZ}{130}
-\newcommand{\thirdKZ}{100}
-\newcommand{\writeButtonsecondKZ}{40}
-\newcommand{\writeButtonfirstKZ}{40}
-\newcommand{\writeButtonthirdKZ}{40}
+\newcommand{\firstArma}{110}
+\newcommand{\secondArma}{110}
+\newcommand{\thirdArma}{110}
+\newcommand{\fourthArma}{110}
+\newcommand{\MasterHoming}{60}
 
 %==============================================================================
 \AddToShipoutPictureBG*{
@@ -52,13 +50,13 @@
         \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
         \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
         \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Кубок РТК Высшая лига:Робо+», 27-28 сентября 2025 г.\par}}
+        «Кубок РТК Высшая лига: РТУ МИРЭА», 11-12 октября 2025 г.\par}}
     \fi
 }
 
 % background
 \date{} % Добавлено для удаления даты
-\title{Задание для очного этапа \\ Хакатона:«Электролиз меди»}
+\title{Задание для очного этапа \\ Хакатона:«Ледяной вызов»}
 
 %==============================================================================
 \begin{document}
@@ -68,16 +66,22 @@
 \vspace*{-1cm}
 
 \renewcommand{\arraystretch}{1}
-\textbf{Задача} - разработать автономного робота для поиска коротких замыканий между электродами по наличию магнитного поля.
+\textbf{Задача} - автономная уборка снега на территории нефтедобычи.
 
-Робот должен начать движение со стартовой ячейки, проехать по 8-ми ваннам, определить, по наличию магнитного поля, пары анод-катод 
-с коротким замыканием и вернувшись в стартовую ячейку нажать кнопки с номерами ванн, где обнаружено замыкание.
-Также по окончании обследования должен быть сформирован файл-протокол.
+Робот должен автономно очистить от снега территорию вокруг арматур, расположенных в 
+углублениях холмистой местности нефтедобывающего объекта и вернуться на зарядную станцию.
+
+Задание считается выполненным полностью если все четыре углубления с арматурой очищены от снега.  
+Допускается только механическое воздействие на снег с помощью самого робота или размещенного на нем 
+дополнительного оборудования – скребков, щеток (в том числе и вращающихся), и т.п. 
+Уборка снега методом «сдувания» не разрешается. Применение методов, причиняющих вред полигону также запрещено.
 
 Для успешного выполенения задания необходимо: 
 \begin{itemize}
-    \item[>>] реализовать автономное движение по электролитическим ваннам;
-    \item[>>] выполнить поиск коротких замыканий.
+    \item[>>] реализовать автономное движение по полигону с препятствиями;
+    \item[>>] выполнить поиск арматур;
+    \item[>>] разработать механизм для очистки арматур от снега;
+    \item[>>] выполнить возврат на стартовую ячейку.
 \end{itemize}
 
 Количество попыток - две. На подготовку к попытке дается 5 минут, на выполнение миссии - 5 минут. 
@@ -89,33 +93,27 @@
 
 \begin{itemize}
     \item[>>] Во время попытки баллы за каждое задание начисляются только один раз.
-    \item[>>] Короткие замыкания определяются безконтактным способом.
-    \item[>>] Баллы за правильное нажатие кнопок могут быть начислены только в том случае, если было обнаружено короткое замыкание.
+    \item[>>] Участок считается очищенным после уборки более 75\% от общего объёма снега в данном углублении с арматурой.
+    \item[>>] Баллы за возврат на стартовую ячейку начисляются только в случае очистки от снега арматур (не менее 1).
 \end{itemize}
 
-\vspace*{0.25cm}
+\vspace*{0.1cm}
 \begin{tabularx}{\textwidth}{|X|c|p{2cm}|}
     \hline
     \textbf{Задание} & \textbf{Баллы} & \textbf{Результат}\\
     \hline
-    Обнаружено короткое замыкание №1 & \firstKZ &  \\
+    Очищена арматура  №1 от снега & \firstArma &  \\
     \hline
-    Обнаружено короткое замыкание №2 & \secondKZ & \\
+    Очищена арматура  №2 от снега & \secondArma & \\
     \hline
-    Обнаружено короткое замыкание №3 & \thirdKZ & \\
+    Очищена арматура  №3 от снега & \thirdArma & \\
     \hline
-    Нажата кнопка короткого замыкания №1 & \writeButtonfirstKZ & \\
+    Очищена арматура  №4 от снега & \fourthArma & \\
     \hline
-    Нажата кнопка короткого замыкания №2 & \writeButtonsecondKZ & \\
-    \hline
-    Нажата кнопка короткого замыкания №3 & \writeButtonthirdKZ & \\
-    \hline
-    \textbf{Штрафы} & \textbf{Баллы} & \textbf{Результат} \\
-    \hline
-    Кнопка нажата неверно (максимум 3 раза за попытку) & \WrongButton &  \\
+    Выполнен возврат робота на стартовую ячейку & \MasterHoming & \\
     \hline
 \end{tabularx}
-\vspace*{0.5cm}
+\vspace*{0.1cm}
 
 \textcolor{red}{ВАЖНО!} В ходе попытки необходимо в режиме реального времени демонстрировать судьям, 
 результаты выполнения заданий в понятном и читаемом виде. 
