--- a/02_proto-col/001_City/city.tex
+++ b/02_proto-col/001_City/city.tex
@@ -21,6 +21,7 @@
 \usepackage{array} % Для выравнивания по правому краю
 \usepackage{setspace}
 \usepackage{xcolor}
+\input{../../footer_options}
 
 \usetikzlibrary{decorations.pathreplacing}
 
@@ -45,14 +46,6 @@
     \fi
 }
 
-\AddToShipoutPictureBG{
-    \ifnum\value{page}=1
-        \put(4cm,26cm){\parbox[b][\paperheight]{\paperwidth}{%
-        \fontsize{14}{14}\selectfont % Уменьшаем размер шрифта
-        \color{gray!75} % Делаем текст полупрозрачным (50% серого)
-        «Высшая Лига: НИУ ВШЭ СПБ, 5-6 июля 2025 г.\par}}
-    \fi
-}
 
 % background
 \date{} % Добавлено для удаления даты
