--- a/04_final_docs/reglament_addition.tex
+++ b/04_final_docs/reglament_addition.tex
@@ -125,31 +125,31 @@
 \vspace*{-0.5cm}
 \section*{Бонус за время}
 \begin{itemize}
-    \item Максимальное количество баллов на одном полигоне — \textbf{500}
     \item Максимальный бонус за время рассчитывается по формуле:
-    
     \begin{center}
     \fbox{%
         \begin{minipage}{0.8\textwidth}
         \centering
         \vspace{8pt}
         $
-        \text{Бонус за время} = (600 - T_1) \times \dfrac{T_2}{500} \times \dfrac{1}{6}
+        \text{Бонус за время B} = (600 - T) \times \dfrac{S}{500} \times \dfrac{1}{6}
         $
-        
         \smallskip
         \small
-        где: $T_1$ — время выполнения (сек), $T_2$ — набранные баллы
+        \begin{tabular}{@{}c@{}}
+        где: $T$ — время выполнения (сек)
+        $S$ — набранные баллы
+        \end{tabular}
         \vspace{8pt}
         \end{minipage}%
     }
     \end{center}
     
-    \item Бонус за время \textbf{не превышает 100 баллов}, что составляет \textbf{20\%} от максимального количества баллов полигона
+    \item Бонус за время ${B}$ \textbf{не превышает 100 баллов}, что составляет \textbf{20\%} от максимального количества баллов полигона
     \item Максимальное количество баллов за первый и второй выбранный полигон составляет
     \begin{itemize}
-        \item Первый полигон: $S_1 = 500 + \text{бонус за время}$ (макс. 600 баллов)
-        \item Второй полигон: $S_2 = 500 + \text{бонус за время}$ (макс. 600 баллов)
+        \item Первый полигон: $R_1 = 500 + \text{бонус за время}$ (макс. 600 баллов)
+        \item Второй полигон: $R_2 = 500 + \text{бонус за время}$ (макс. 600 баллов)
     \end{itemize}
 \end{itemize}
 
@@ -162,12 +162,12 @@
     \centering
     \vspace{8pt}
     $
-    \text{Итоговый балл} = S_1 + S_2
+    \text{Итоговый балл} = R_1 + R_2
     $
     
     \smallskip
     \small
-    где: $S_1$ — баллы за первый выбранный полигон, $S_2$ — баллы за второй выбранный полигон
+    где: $R_1$ — баллы за первый выбранный полигон, $R_2$ — баллы за второй выбранный полигон
     \vspace{8pt}
     \end{minipage}%
 }
